--- a/style.css
+++ b/style.css
@@ -8,3 +8,93 @@ License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: browngoldsteinlevy
 */
+
+/*
+===============================
+         Global Style          
+===============================
+*/
+
+html,
+body {
+    padding: 0;
+    margin: 0;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: greyscale;
+    font-family: 'Open Sans', sans-serif;
+}
+
+body {
+    max-width: 100vw;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+*::after,
+*::before {
+    box-sizing: inherit;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin-bottom: 0;
+    padding-bottom: 14px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+p {
+    margin-bottom: 0;
+    padding-bottom: 10px;
+}
+
+a {
+    text-decoration: none;
+}
+
+button,
+input[type='button'],
+input[type='submit'] {
+    background-color: transparent;
+    border: 0;
+}
+
+.container {
+    max-width: 1130px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.d-flex {
+    display: flex;
+}
+
+.flex-wrap {
+    flex-wrap: wrap;
+}
+
+.justify-center {
+    justify-content: center;
+}
+
+.item-center {
+    align-items: center;
+}
+
+.space-between {
+    justify-content: space-between;
+}
+
+.space-around {
+    justify-content: space-around;
+}
+
+.text-center {
+    text-align: center;
+}
