--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: greyscale;
     font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
 }
 
 body {
@@ -46,6 +47,7 @@ h6 {
     margin-bottom: 0;
     padding-bottom: 14px;
     font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
 }
 
 p {
@@ -121,4 +123,31 @@ img {
     display: block;
     width: 100%;
     object-fit: contain;
+}
+
+.nav-trigger {
+    display: none;
+}
+
+@media only screen and (max-width: 992px) {
+    .nav-trigger {
+        display: block;
+    }
+}
+
+.header-navigation {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    column-gap: 25px;
+}
+
+.header-navigation a {
+    display: block;
+    color: #9B9B9B;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 22px;
 }
