Feature: Add Front Page and Hero Section

--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ h3,
 h4,
 h5,
 h6 {
+    margin-top: 0;
     margin-bottom: 0;
     padding-bottom: 14px;
     font-family: 'Montserrat', sans-serif;
@@ -51,6 +52,7 @@ h6 {
 }
 
 p {
+    margin-top: 0;
     margin-bottom: 0;
     padding-bottom: 10px;
 }
@@ -111,6 +113,12 @@ img {
 ===============================
 */
 
+.site-header {
+    box-shadow: 0 4px 8px rgba(41, 41, 41, 0.1);
+    position: relative;
+    z-index: 2;
+}
+
 .logo-wrapper {
     width: 153px;
 }
@@ -162,4 +170,45 @@ img {
 
 .search-trigger {
     cursor: pointer;
+}
+
+/*
+===============================
+             Hero              
+===============================
+*/
+
+.hero {
+    padding: 180px 0;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    position: relative;
+}
+
+.hero::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(86, 19, 90, 0.8);
+}
+
+.hero__content {
+    position: relative;
+    z-index: 2;
+}
+
+.hero-title {
+    padding-bottom: 0;
+    font-size: 30px;
+    line-height: 38px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+.hero-title > span {
+    color: #FCB611;
 }
