--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ body {
     -moz-osx-font-smoothing: greyscale;
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
 }
 
 body {
@@ -55,6 +57,7 @@ p {
     margin-top: 0;
     margin-bottom: 0;
     padding-bottom: 10px;
+    color: #565656;
 }
 
 a {
@@ -73,6 +76,10 @@ input[type='submit'] {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
+}
+
+.d-i-flex {
+    display: inline-flex;
 }
 
 .d-flex {
@@ -105,6 +112,36 @@ input[type='submit'] {
 
 img {
     max-width: 100%;
+}
+
+.btn {
+    padding: 10px 30px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    column-gap: 10px;
+    line-height: 1;
+    transition: 0.3s ease-in-out;
+    font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+}
+
+.btn-outline-grey {
+    border: 1px solid #B1B1B1;
+    color: #3B3B3B;
+}
+
+.btn-outline-grey:hover {
+    color: #56135A;
+    border-color: #56135A;
+}
+
+.btn-has-icon img {
+    transition: 0.3s ease-in-out;
+}
+
+.btn-has-icon:hover img {
+    transform: translateX(10px);
 }
 
 /*
@@ -174,7 +211,7 @@ img {
 
 /*
 ===============================
-             Hero              
+          Front Page           
 ===============================
 */
 
@@ -211,4 +248,19 @@ img {
 
 .hero-title > span {
     color: #FCB611;
+}
+
+.history-content {
+    padding: 100px 0;
+}
+
+.history-content__content {
+    padding: 0 100px;
+}
+
+.history-content__content p {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    margin-bottom: 30px;
+    line-height: 28px;
 }
