--- a/style.css
+++ b/style.css
@@ -370,3 +370,74 @@ img {
     background-color: #FCB611;
     border-color: #FCB611;
 }
+
+.recent-news {
+    margin-bottom: 100px;
+}
+
+.recent-news__title {
+    font-size: 24px;
+    line-height: 32px;
+    text-transform: uppercase;
+    color: #56135A;
+}
+
+.recent-news__entries {
+    margin: 40px 0;
+    column-gap: 40px;
+}
+
+.news-entry__image-wrapper {
+    height: 195px;
+    width: 100%;
+    overflow: hidden;
+    margin-bottom: 10px;
+    border-bottom: 5px solid #FCB611;
+}
+
+.news-entry__image-wrapper > a {
+    display: block;
+    width: 100%;
+}
+
+.news-entry__image-wrapper > a > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center center;
+}
+
+.recent-news__entry {
+    flex: 1;
+}
+
+.news-entry__meta {
+    font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
+    font-style: 400;
+    text-transform: uppercase;
+    color: #292929;
+    margin-bottom: 10px;
+    column-gap: 20px;
+}
+
+.news-entry__meta a {
+    color: #292929;
+}
+
+.news-entry__title {
+    font-size: 18px;
+    line-height: 26px;
+}
+
+.news-entry__title a {
+    color: #292929;
+}
+
+.news-entry__title a:hover {
+    color: #56135A;
+}
+
+.recent-news__button-wrapper {
+    margin-top: 20px;
+}
