--- a/style.css
+++ b/style.css
@@ -281,25 +281,27 @@ img {
 
 .swiper {
     width: 100%;
-    height: 537px;
 }
 
 .swiper-slide {
     font-size: 18px;
-    background: #FFFFFF;
     width: 100%;
     display: flex;
-    justify-content: flex-end;
 }
 
 .featured-cases {
     margin-bottom: 100px;
 }
 
+.featured-cases__slider {
+    height: 537px;
+}
+
 .featured-cases__slider_slide {
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    justify-content: flex-end;
 }
 
 .featured-cases__slide_content {
@@ -440,4 +442,33 @@ img {
 
 .recent-news__button-wrapper {
     margin-top: 20px;
+}
+
+.recent-awards {
+    margin-bottom: 100px;
+    background-color: #F1F1F1;
+    padding: 100px 0;
+}
+
+.recent-awards__title {
+    font-size: 24px;
+    line-height: 32px;
+    text-transform: uppercase;
+    color: #56135A;
+}
+
+.recent-awards__slider {
+    margin: 40px 0;
+    padding: 0 50px;
+}
+
+.recent-awards__slide img {
+    width: auto;
+    height: 150px;
+    object-fit: contain;
+}
+
+.recent-awards__slider-next::after, .recent-awards__slider-prev::after {
+    color: #A3A3A3;
+    font-size: 28px;
 }
