--- a/style.css
+++ b/style.css
@@ -441,7 +441,6 @@ img {
 }
 
 .recent-awards {
-    margin-bottom: 100px;
     background-color: #F1F1F1;
     padding: 100px 0;
 }
@@ -467,4 +466,42 @@ img {
 .recent-awards__slider-next::after, .recent-awards__slider-prev::after {
     color: #A3A3A3;
     font-size: 28px;
+}
+
+.footer-cta {
+    padding: 150px 0;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    position: relative;
+}
+
+.footer-cta::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(86, 19, 90, 0.8);
+}
+
+.footer-cta__content {
+    position: relative;
+    z-index: 2;
+}
+
+.footer-cta__title {
+    color: #FFFFFF;
+    font-size: 28px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
+
+.footer-cta__title > span {
+    color: #FCB611;
+}
+
+.footer-cta__button-wrapper {
+    margin-top: 30px;
 }
