--- a/style.css
+++ b/style.css
@@ -505,3 +505,138 @@ img {
 .footer-cta__button-wrapper {
     margin-top: 30px;
 }
+
+.footer-top {
+    background-color: #3C3C3C;
+    border-top: 14px solid #5D5D5D;
+}
+
+.footer-top__content .footer-column {
+    padding: 70px 20px;
+    flex: 1;
+}
+
+.footer-top__content .footer-column:first-child {
+    border-right: 1px solid #5D5D5D;
+}
+
+.footer-column > .d-flex {
+    column-gap: 20px;
+}
+
+.footer-content > h4 {
+    color: #FCB611;
+    font-size: 16px;
+    text-transform: capitalize;
+}
+
+.footer-content > p {
+    color: #FFFFFF;
+    font-size: 14px;
+    line-height: 26px;
+    margin-bottom: 10px;
+}
+
+.footer-contact {
+    margin-bottom: 20px;
+}
+
+.footer-contact:last-child {
+    margin-bottom: 0;
+}
+
+.footer-contact > .d-flex {
+    column-gap: 20px;
+}
+
+.footer-contact__image {
+    width: 25px;
+    height: 25px;
+    overflow: hidden;
+}
+
+.footer-contact__image > img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.footer-contact__content > p:last-child {
+    padding-bottom: 0;
+}
+
+.footer-contact__content > p span {
+    color: #FCB611;
+    font-size: 14px;
+    font-weight: 600;
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.footer-contact__content > p, .footer-contact__content a {
+    color: #FFFFFF;
+    font-size: 14px;
+}
+
+.footer-contact__content a {
+    font-weight: 600;
+    letter-spacing: 1px;
+}
+
+.footer-contact__content a:hover {
+    color: #FCB611;
+}
+
+.footer-menu {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+.footer-menu a {
+    color: #C1C1C1;
+    font-weight: 600;
+    padding: 3px 0;
+    margin-bottom: 10px;
+    display: block;
+    text-transform: capitalize;
+}
+
+.footer-menu li:last-child {
+    padding-bottom: 0;
+}
+
+.footer-menu a:hover {
+    color: #FCB611;
+}
+
+.footer-bottom {
+    background-color: #333333;
+    padding: 30px 0;
+}
+
+.footer-credit {
+    padding-bottom: 0;
+    color: #C1C1C1;
+    font-weight: 600;
+}
+
+.social-menu {
+    column-gap: 20px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.social-menu a {
+    width: 25px;
+    height: 25px;
+    display: block;
+}
+
+.social-menu a img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    display: block;
+}
