--- a/style.css
+++ b/style.css
@@ -640,3 +640,63 @@ img {
     object-fit: contain;
     display: block;
 }
+
+/* 
+===============================
+             About             
+===============================
+*/
+
+.mission {
+    padding: 120px 0;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    position: relative;
+}
+
+.mission::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(241, 241, 241, 0.8);
+}
+
+.mission__content {
+    position: relative;
+    z-index: 2;
+    width: 75%;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.mission-title {
+    color: #282828;
+    font-size: 26px;
+    line-height: 34px;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.mission-title-sep span {
+    display: inline-block;
+    margin-bottom: 10px;
+    border-bottom: 3px solid #FCB611;
+    padding: 10px 0;
+    width: 75px;
+}
+
+.mission-description {
+    padding-bottom: 0;
+    font-size: 22px;
+    line-height: 40px;
+    color: #56135A;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+}
