--- a/style.css
+++ b/style.css
@@ -692,6 +692,14 @@ img {
     width: 75px;
 }
 
+.section-title-sep-primary span {
+    display: inline-block;
+    margin-bottom: 10px;
+    border-bottom: 3px solid #56135A;
+    padding: 10px 0;
+    width: 75px;
+}
+
 .mission-description {
     padding-bottom: 0;
     font-size: 22px;
@@ -747,4 +755,43 @@ img {
     position: absolute;
     top: -30px;
     left: 0px;
+}
+
+.about-content {
+    padding: 120px 0;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    position: relative;
+}
+
+.about-content::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(252, 181, 17, 0.8);
+}
+
+.about-content__content {
+    position: relative;
+    z-index: 2;
+    padding: 80px;
+    background-color: #FFFFFF;
+    box-shadow: 0 0 20px rgba(41, 41, 41, 0.1);
+}
+
+.about-content-description p {
+    line-height: 32px;
+    color: #181818;
+}
+
+.about-content-description p a {
+    color: #FCB611;
+}
+
+.about-content-description p a:hover {
+    text-decoration: underline;
 }
