--- a/style.css
+++ b/style.css
@@ -795,3 +795,53 @@ img {
 .about-content-description p a:hover {
     text-decoration: underline;
 }
+
+/* 
+===============================
+             Team              
+===============================
+*/
+
+.team__content {
+    padding: 100px 0;
+}
+
+.team-member {
+    width: 17.6%;
+    margin-right: 3%;
+    margin-bottom: 40px;
+}
+
+.team-member:nth-child(5n), .team-member:last-child {
+    margin-right: 0;
+}
+
+.team-member-image {
+    height: 263px;
+    overflow: hidden;
+    border: 1px solid #323232;
+}
+
+.team-member-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.team-member-name a {
+    color: #565656;
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: 600;
+    padding: 15px 0;
+    margin-top: 5px;
+    display: block;
+}
+
+.team-member-name-sep {
+    width: 75px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 3px;
+    background-color: #FCB611;
+}
