--- a/style.css
+++ b/style.css
@@ -86,6 +86,10 @@ input[type='submit'] {
     display: flex;
 }
 
+.dir-column {
+    flex-direction: column;
+}
+
 .flex-wrap {
     flex-wrap: wrap;
 }
@@ -124,6 +128,17 @@ img {
     font-size: 14px;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
+}
+
+.btn-text {
+    color: #3B3B3B;
+    text-transform: uppercase;
+    column-gap: 10px;
+    line-height: 1;
+    transition: 0.3s ease-in-out;
+    font-size: 14px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
 }
 
 .btn-outline-grey {
@@ -844,4 +859,46 @@ img {
     margin-right: auto;
     height: 3px;
     background-color: #FCB611;
+}
+
+.fellowship {
+    margin-bottom: 100px;
+}
+
+.fellowship-content-title, .fellowship-content-subtitle, .fellowship-content-subtitle-text {
+    flex: 1;
+}
+
+.fellowship-content-title-text, .fellowship-content-subtitle-title {
+    color: #282828;
+    font-size: 26px;
+    font-weight: 600;
+    line-height: 34px;
+    text-transform: uppercase;
+    margin-bottom: 10px;
+}
+
+.fellowship-content-description {
+    color: #323232;
+    line-height: 30px;
+}
+
+.fellowship-content-subtitle-name {
+    color: #565656;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.fellowship-content-subtitle-image {
+    flex: 0.5;
+}
+
+.fellowship-content-subtitle-image > img {
+    width: 197px;
+    height: 263px;
+    object-fit: contain;
+}
+
+.fellowship-btn {
+    margin-top: 20px;
 }
