--- a/style.css
+++ b/style.css
@@ -902,3 +902,82 @@ img {
 .fellowship-btn {
     margin-top: 20px;
 }
+
+/*
+===============================
+           Portfolio           
+===============================
+*/
+
+.portfolio__content {
+    padding: 100px 0;
+}
+
+.portfolio__content_content {
+    width: 80%;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.portfolio__content_content p {
+    line-height: 28px;
+}
+
+.portfolio__content_entries {
+    gap: 3%;
+    margin-top: 60px;
+}
+
+.portfolio-item__container {
+    width: 48.5%;
+    margin-bottom: 35px;
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.2);
+}
+
+.portfolio-item__text {
+    flex: 1.2;
+}
+
+.portfolio-item__text_content {
+    width: 90%;
+}
+
+.portfolio-item__text h2 {
+    font-size: 17px;
+    font-weight: 600;
+    line-height: 26px;
+    text-transform: uppercase;
+}
+
+.portfolio-item__text h2 a {
+    color: #242424;
+    transition: 0.3s ease-in-out;
+    display: block;
+}
+
+.portfolio-item__text h2 a:hover {
+    color: #FCB611;
+}
+
+.portfolio-item__text p {
+    color: #565656;
+    font-size: 14px;
+    line-height: 26px;
+    margin-bottom: 10px;
+}
+
+.portfolio-item__image {
+    flex: 1;
+    border-left: 3px solid #FCB611;
+}
+
+.portfolio-item__image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+
+.portfolio-btn {
+    font-size: 12px;
+}
