--- a/style.css
+++ b/style.css
@@ -910,7 +910,8 @@ img {
 */
 
 .portfolio__content {
-    padding: 100px 0;
+    padding-top: 100px;
+    padding-bottom: 50px;
 }
 
 .portfolio__content_content {
@@ -980,4 +981,20 @@ img {
 
 .portfolio-btn {
     font-size: 12px;
+}
+
+.the-pagination {
+    padding: 30px 0;
+}
+
+.page-numbers {
+    padding: 5px 10px;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-family: 'Montserrat', sans-serif;
+    color: #292929;
+}
+
+.page-numbers.current {
+    color: #FCB611;
 }
