--- a/style.css
+++ b/style.css
@@ -998,3 +998,42 @@ img {
 .page-numbers.current {
     color: #FCB611;
 }
+
+/*
+===============================
+             News              
+===============================
+*/
+
+.news {
+    padding-top: 100px;
+    padding-bottom: 50px;
+}
+
+.news__content {
+    gap: 3%;
+}
+
+.news-entry {
+    width: 48.5%;
+    margin-bottom: 50px;
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.2);
+}
+
+.news-entry__thumbnail {
+    height: 195px;
+    width: 100%;
+    margin-bottom: 10px;
+    border-bottom: 5px solid #FCB611;
+}
+
+.news-entry__thumbnail img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
+
+.news-entry__content {
+    padding: 10px;
+}
